--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation Styles here
+
+
+    nav {
+        
+        margin: 0 auto;
+        .displayFlex(space-between, center);
+        
+
+        @media @phone {
+            display: flex;
+            text-align: center;
+        }
+
+        .anchor {
+            font-size: 1.5rem;
+            margin: 25px;
+            text-decoration: none;
+            color: @font-color;
+
+            @media @phone {
+                margin: 20px 33px 20px 33px;
+            }
+        }
+
+
+    }
+
