--- a/less/global.less
+++ b/less/global.less
@@ -8,11 +8,14 @@ html {
 
 html, body {
   font-family: 'Roboto', sans-serif;
+  max-width: 1400px;
 }
 
 h1, h2, h3, h4, h5 {
   font-family: 'Indie Flower', cursive;
 }
+
+
 
 h1 {
   font-size: 4rem;
@@ -39,8 +42,11 @@ img {
   height: auto;
 }
 
+
+
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-}
+  
+} 
